@@ -1,5 +1,7 @@
 Changes to Version 3.1-2
  
+  o Fixed bugs in interface for residualPlots() and residualPlot()
+  
   o Fixed hccm() to return a correct error message when regressors are ill-conditioned.
   
   o Use t-distribution for score tests in boxTidwell() and add omnibus score test (suggestions of Peter Dalgaard).
